writed: user update avatar & fixed doc
