# docs/openapi.yaml
@@ -13,7 +13,11 @@ info:
 servers:
   - {
       description: 'localhost',
-      url: 'http://127.0.0.1:8088/api/'
+      url: 'http://127.0.0.1:8088/api'
+  }
+  - {
+      description: 'server',
+      url: 'http://80.208.225.82:8088/api'
   }
 
 tags: null
@@ -25,7 +29,6 @@ paths:
       summary: Get Users
       tags:
         - Public Users
-
       responses:
         200:
           description: "User Resource"
@@ -35,6 +38,49 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/UserResource'
+
+    post:
+      summary: Create User
+      tags:
+        - Public Users
+      requestBody:
+        content:
+          applcation/json:
+            schema:
+              type: object
+              properties:
+                first_name:
+                  type: string
+                  example: "Alex"
+                last_name:
+                  type: string
+                  example: "Petrov"
+                avatar:
+                  type: string
+                  format: binary
+                email:
+                  type: string
+                  example: "example@mail.com"
+                  required: true
+                  uniqueItems: true
+                password:
+                  type: string
+                  example: "Secret12345!"
+                  required: true
+                password_confirmation:
+                  type: string
+                  example: "Secret12345!"
+                  required: true
+                phone:
+                  type: string
+                  example: "12435445"
+      responses:
+        200:
+          description: "User created"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserResource'
 
   /users/{user_id}:
     get:
@@ -71,20 +117,31 @@ paths:
             type: integer
             example: 3
 
-        - name: name
-          in: query
-          required: false
-          schema:
-            type: string
-            example: "UserName"
-
-        - name: email
-          in: query
-          required: false
-          schema:
-            type: string
-            example: "user@gmail.com"
-
+      requestBody:
+        content:
+          appication/json:
+            schema:
+              type: object
+              properties:
+                first_name:
+                  type: string
+                  example: "Alex"
+                last_name:
+                  type: string
+                  example: "Petrov"
+                email:
+                  type: string
+                  example: "example@mail.com"
+                  uniqueItems: true
+                password:
+                  type: string
+                  example: "Secret12345!"
+                password_confirmation:
+                  type: string
+                  example: "Secret12345!"
+                phone:
+                  type: string
+                  example: "12435445"
       responses:
         202:
           description: Accepted Response
@@ -110,6 +167,37 @@ paths:
         204:
           description: No Content
 
+  /users/{id}/avatars:
+    post:
+      description: Update user avatar
+      tags:
+        - Update user avatar
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            example: 10
+        - name: avatar
+          in: query
+          required: false
+          schema:
+            type: string
+            format: binary
+            example: cover.jpg
+            enum:
+              - ".jpeg"
+              - ".jpg"
+              - ".png"
+      responses:
+        200:
+          description: "Updates user avatar"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserResource'
+
 components:
   schemas:
     UserResource:
@@ -124,15 +212,20 @@ components:
         last_name:
           type: string
           example: "Cronin"
+        full_name:
+          type: string
+          example: "Linda Cronin"
+        avatar:
+          type: string
+          example: "http://localhost:8088/storage/users/avatars/3PE1kInVVuxzayKHAQHjPuc8nDCOawhs.jpg"
+          enum:
+            - null
         email:
           type: string
           example: "test@gmail.com"
         phone:
           type: string
           example: "+38095123456"
-        email_verified_at:
-          type: string
-          example: "17 hours ago"
         created_at:
           type: string
           example: "17 hours ago"
