# routes/api.php
@@ -18,5 +18,6 @@ use Illuminate\Support\Facades\Route;
 //});
 
 Route::apiResource('/users', 'UserController');
+Route::post('/users/{id}/avatars', 'UserAvatarController');
 
 
